--- a/Dockerfile.Top5
+++ b/Dockerfile.Top5
@@ -2,6 +2,12 @@
 FROM aghorbani/stable-diffusion-webui:base
 ENV DEBIAN_FRONTEND noninteractivee
 
+RUN git clone https://github.com/continue-revolution/sd-webui-segment-anything /content/stable-diffusion-webui/extensions/sd-webui-segment-anythin
+ADD --chown=user https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth /content/stable-diffusion-webui/extensions/sd-webui-segment-anythin/models/sam/sam_vit_b_01ec64.pth
+ADD --chown=user https://dl.fbaipublicfiles.com/segment_anything/sam_vit_l_0b3195.pth /content/stable-diffusion-webui/extensions/sd-webui-segment-anythin/models/sam/sam_vit_l_0b3195.pth
+ADD --chown=user https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth /content/stable-diffusion-webui/extensions/sd-webui-segment-anythin/models/sam/sam_vit_h_4b8939.pth 
+RUN pip install segment_anything
+
 # ---- Deliberate ----
 # ADD --chown=user https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate.safetensors /content/stable-diffusion-webui/models/Stable-diffusion/Deliberate.safetensors
 ADD --chown=user https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors /content/stable-diffusion-webui/models/Stable-diffusion/Deliberate_v2.safetensors
